# crafty

./: CHANGELOG.md  README.md  cabal.project  crafty.cabal
app/: Main.hs
src/: AST.hs  Bytecode.hs  CST.hs  Crafty.hs  Env.hs  Eval.hs  Heap.hs  Ident.hs  Op.hs  Parse.hs  Pretty.hs  Stack.hs
test/: Generators.hs  Spec.hs
